--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "run": "",
-    "test": "npm test"
+    "test": "mocha"
   },
   "author": "Juan Camilo Corzo Tejada",
   "license": "ISC",
@@ -16,6 +16,9 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "standard": "^16.0.3"
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "standard": "^16.0.3",
+    "supertest": "^6.0.1"
   }
 }
