--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "api rest",
   "main": "index.js",
   "scripts": {
-    "run": "",
+    "dev": "node --exec babel-node index.js",
     "test": "mocha"
   },
   "author": "Juan Camilo Corzo Tejada",
@@ -14,8 +14,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "standard": "^16.0.3",
