--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "api rest",
   "main": "index.js",
   "scripts": {
-    "dev": "node --exec babel-node index.js",
+    "dev": "nodemon --exec babel-node index.js",
     "test": "mocha"
   },
   "author": "Juan Camilo Corzo Tejada",
@@ -16,8 +16,10 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
+    "nodemon": "^2.0.6",
     "standard": "^16.0.3",
     "supertest": "^6.0.1"
   }
