--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec babel-node index.js",
-    "test": "mocha --require @babel/register test/*.js"
+    "test": "mocha --require @babel/register test/*.js",
+    "build": "./build.sh"
   },
   "author": "Juan Camilo Corzo Tejada",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
