--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,4 +1,7 @@
 FROM mhart/alpine-node:12
 WORKDIR /app
+COPY . .
+RUN npm install
+RUN chmod +x build.sh && npm run build
 EXPOSE 3001
-ENTRYPOINT [ "node", "index.js" ]
+ENTRYPOINT [ "node", "build/index.js" ]
