--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon --exec babel-node index.js",
     "test": "mocha --require @babel/register test/*.js",
-    "build": "sh ./build.sh"
+    "build": "sh ./build.sh",
+    "lint": "standard"
   },
   "author": "Juan Camilo Corzo Tejada",
   "license": "ISC",
