react with webpack

--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -5,4 +5,4 @@ RUN npm install
 EXPOSE 3000
 RUN npm run build
 RUN npm install -g serve
-ENTRYPOINT serve -s build -l 3000 
+ENTRYPOINT serve -s dist -l 3000 
